# pairing-ariel

./: CMakeLists.txt  Cargo.toml  bls12_381.sol
src/: lib.rs
src/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs
